// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionPanel Snapshot testing expanded state 1`] = `
<dd
  className="is-expanded"
  id="panel-1"
>
  Panel 1
</dd>
`;

exports[`AccordionPanel Snapshot testing minimal 1`] = `
<dd
  className={null}
  id="panel-1"
>
  Panel 1
</dd>
`;

exports[`AccordionPanel Snapshot testing with more props 1`] = `
<dd
  aria-labelledby="header-1"
  className="accordion__panel"
  id="panel-1"
  role="region"
  style={
    Object {
      "color": "inherit",
    }
  }
>
  Panel 1
</dd>
`;
